# wolf-pack

./: Cargo.toml  LICENSE  README.md  TODO.md  winpkg.wxs
.github/workflows/: macos.yml  rust.yml
install/: win.nsi
models/: map3.mtl  map3.toml  wolf_standing.mtl
models/wolfrunning/: wolf_running_000008.mtl  wolf_running_000015.mtl
scripts/: start_dev.sh
src/: client.rs  constants.rs  game_client.rs  leaderboard.rs  main.rs  menu.rs  minipack.rs  msg.rs  server.rs  settings.rs  stage.rs
src/menu/: info.rs  main.rs  mod.rs  settings.rs  start.rs
textures/: dialog.xcf
