[package]
name = "wolf-pack"
version = "0.1.0"
authors = ["Darnell Andries <darnell@andries.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubik = { path = "../cubik", version = "0.1" }
serde = { version = "*", features = ["derive"] }
rand = "*"
derive_more = "*"

[profile.dev]
opt-level = 2
