[package]
name = "wolf-pack"
description = "Blah blah"
version = "0.1.0"
authors = ["Darnell Andries <darnell@andries.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubik = { path = "../cubik", version = "0.1" }
serde = { version = "*", features = ["derive"] }
rand = "*"
derive_more = "*"
dirs = "*"
toml = "*"

[profile.dev]
opt-level = 2

[package.metadata.bundle]
name = "ExampleApplication"
identifier = "com.doe.exampleapplication"
version = "0.1.0"
resources = ["models", "fonts", "audio", "textures"]
copyright = "Copyright (c) Darnell Andries"
category = "Developer Tool"
short_description = "Blah blah"
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
